# ocf-android-universal-controlpoint

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/ocfcontrolpoint/wiklosoft/iotcontrolpoint/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wiklosoft/ocf/controlpoint/: ApplicationContext.java  DeviceListAdapter.java  (+4 more)
app/src/main/java/ocfcontrolpoint/wiklosoft/iotcontrolpoint/: ApplicationContext.java  DeviceListAdapter.java  DeviceListFragment.java  MainActivity.java  VariableListAdapter.java  VariableListFragment.java
app/src/main/res/drawable/: thumb.xml
app/src/main/res/layout/: activity_main.xml  device_entry.xml  fragment_device_list2.xml  fragment_variable_list.xml  resource_binnary.xml  resource_colour_rgb.xml  resource_light_dimming.xml  variable_entry.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libocf/: build.gradle  proguard-rules.pro
libocf/src/androidTest/java/com/wiklosoft/ocf/: ApplicationTest.java
libocf/src/main/: AndroidManifest.xml
libocf/src/main/cpp/: CMakeLists.txt  ocfapp.cpp  ocfapp.h
libocf/src/main/java/com/wiklosoft/ocf/: OcfControlPoint.java  OcfDevice.java  OcfDeviceVariable.java  OcfDeviceVariableCallback.java
libocf/src/main/java/ocfcontrolpoint/wiklosoft/libocf/: OcfControlPoint.java  OcfDevice.java  OcfDeviceVariable.java  OcfDeviceVariableCallback.java
libocf/src/main/jni/: Android.mk  test.cpp  test.h
libocf/src/main/res/values/: strings.xml
